[project]
name = "car-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Julio Gazoli",email = "julio.gazoli@sorocaba.sp.gov.br"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.135.2,<0.136.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
